add container and header

--- a/index.html
+++ b/index.html
@@ -11,11 +11,37 @@
     <!-- favicon -->
     <link rel="icon" href="img/icon-pc.png" type="image/png">
 
+    <link rel="stylesheet" href="css/style.css">
+
     <!-- title -->
     <title>The Booleaner</title>
 </head>
 
 <body>
+    <!-- container -->
+    <div class="container">
+
+        <!-- header -->
+        <header>
+
+            <!-- container and logo -->
+            <div class="container-logo">
+                <img src="img/logo.svg" alt="booleaner image" class="logo">
+            </div>
+
+            <!-- heading and address -->
+            <div>
+                <h1>Internet deve essere al servizio del "bene pubblico": il <br>
+                manifesto di Tim Berners Lee</h1>
+                <address class="address-text">Scritto da <span class="booleaner-text">The Booleaner</span><br>
+                il 10/10/2020</address>
+            </div>
+
+
+
+
+        </header>
+    </div>
     
 </body>
 </html>
