add header image

--- a/index.html
+++ b/index.html
@@ -33,9 +33,24 @@
             <div>
                 <h1>Internet deve essere al servizio del "bene pubblico": il <br>
                 manifesto di Tim Berners Lee</h1>
-                <address class="address-text">Scritto da <span class="booleaner-text">The Booleaner</span><br>
+                <address class="address-text">Scritto da <span class="booleaner-text">The Booleaner</span>
+
+                <br>
+
                 il 10/10/2020</address>
             </div>
+
+            <div>
+                <img src="img/tim-1.jpg" alt="Tim conference">
+                <img src="img/tim-2.jpg" alt="Tim pic">
+                <div class="image-text">1th Photo: John S. and James L.knight Foundation, by Scott Henrichsen 
+
+                <br>
+
+                2nd Photo: Wikimedia, by Paul Clarke</div>
+            </div>
+
+            
 
 
 
