--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis et illo sit, nemo consequatur commodi accusantium sint facilis voluptatibus excepturi nisi possimus, earum quae provident! Commodi perferendis molestias expedita.
                 <span class="special-text">Nesciunt tempore dolore enim reiciendis velit accusamus</span> iste iure debitis voluptate illo quidem, in temporibus ratione mollitia recusandae quisquam distinctio sit excepturi! Molestias quidem fuga accusantium dolores suscipit voluptas numquam!
                 Eaque quo cumque pariatur optio veniam voluptatibus nihil officia sit? Ut aliquam maiores vitae atque vel deleniti, tempora voluptates, accusantium in at accusamus tempore? Nulla incidunt quia voluptatum veritatis nobis.
+                
             </p>
 
             <ul>
@@ -65,6 +66,38 @@
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, dolorum.</li>
             </ul>
+
+            <!-- table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</th>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</th>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</th>
+                    </tr>
+                </tbody>
+
+            </table>
 
         </main>
                 
