--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <!-- paragraph -->
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quis et illo sit, nemo consequatur commodi accusantium sint facilis voluptatibus excepturi nisi possimus, earum quae provident! Commodi perferendis molestias expedita.
-                <span class="special-text">Nesciunt tempore dolore enim reiciendis velit accusamus</span> iste iure debitis voluptate illo quidem, in temporibus ratione mollitia recusandae quisquam distinctio sit excepturi! Molestias quidem fuga accusantium dolores suscipit voluptas numquam!
-                Eaque quo cumque pariatur optio veniam voluptatibus nihil officia sit? Ut aliquam maiores vitae atque vel deleniti, tempora voluptates, accusantium in at accusamus tempore? Nulla incidunt quia voluptatum veritatis nobis.
+                Nesciunt tempore dolore enim reiciendis velit accusamus iste iure debitis voluptate illo quidem, in temporibus ratione mollitia recusandae quisquam distinctio sit excepturi! Molestias quidem fuga accusantium dolores suscipit voluptas numquam!
+                <span class="special-text">Eaque quo cumque pariatur optio veniam voluptatibus</span>nihil officia sit? Ut aliquam maiores vitae atque vel deleniti, tempora voluptates, accusantium in at accusamus tempore? Nulla incidunt quia voluptatum veritatis nobis.
             </p>
 
             
