--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
                     <tr>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</th>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</td>
                     </tr>
 
                     <tr>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</th>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</td>
                     </tr>
 
                     <tr>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</th>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae ratione omnis minus eaque, voluptates quos ea possimus non suscipit pariatur itaque quo distinctio doloremque? Voluptates possimus voluptatem sapiente repudiandae iusto.</td>
                     </tr>
                 </tbody>
             </table>
